Added hero section

--- a/index.html
+++ b/index.html
@@ -94,9 +94,21 @@
     <header class="hero">
         <div class="hero__container container">
             <div class="hero__content">
-               <h1 class="hero_title">
+               <h1 class="hero__title">
                 Your <span class="hero__title--primary">productivity</span> assistant
                </h1> 
+               <p class="hero__description">
+                    Boost your productivity and improve your health with Leno
+                    - the all-in-one app for developers and creators.
+               </p>
+               <div class="hero__buttons">
+                <a href="#download" class="hero__button btn">
+                    <i class="fa-brands fa-apple"></i> For Apple
+                </a>
+                <a href="#download" class="hero__button btn">
+                    <i class="fa-brands fa-android"></i> For Android 
+                </a>
+               </div>
             </div>
             <div class="hero__image">
                 <img src="./images/header-smartphones.png" alt="Leno App">
