--- a/index.html
+++ b/index.html
@@ -116,6 +116,58 @@
         </div>
     </header>
 
+    <!-- Testemonials -->
+
+    <section class="testemonials" id="testimonials">
+        <div class="testimonials__container container">
+            <div class="testimonials__card">
+                <div class="testimonials__image">
+                    <img src="./images/testimonial-1.jpg" alt="Testimoinal 1">
+                </div>
+                <div class="testimonials__card-content">
+                    <p class="testimonials__card-text">
+                        "Leno has truly transformed how I manage my time and
+                        health. Highly recommended!"
+                    </p>
+                    <h3 class="testimonials__card-title">
+                        Samantha Samson
+                    </h3>
+                </div>
+            </div>
+
+            <div class="testimonials__card">
+                <div class="testimonials__image">
+                    <img src="./images/testimonial-2.jpg" alt="Testimoinal 2">
+                </div>
+                <div class="testimonials__card-content">
+                    <p class="testimonials__card-text">
+                        "As a developer , I rely on Leno every day to keep me 
+                        focued and energized. It's a game changed!"
+                    </p>
+                    <h3 class="testimonials__card-title">
+                        Mike Johnson
+                    </h3>
+                </div>
+            </div>
+
+            <div class="testimonials__card">
+                <div class="testimonials__image">
+                    <img src="./images/testimonial-3.jpg" alt="Testimoinal 3">
+                </div>
+                <div class="testimonials__card-content">
+                    <p class="testimonials__card-text">
+                        "With Leno, I've been able to achieve my goals faster
+                        and healthier than ever before. It's a must-have app!"
+                    </p>
+                    <h3 class="testimonials__card-title">
+                        Laney Smith
+                    </h3>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
     <script src="./js/script.js"></script>
 </body>
 </html>
