Added testimonials section

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <!-- Testemonials -->
 
-    <section class="testemonials" id="testimonials">
+    <section class="testimonials" id="testimonials">
         <div class="testimonials__container container">
             <div class="testimonials__card">
                 <div class="testimonials__image">
