Added features section

--- a/index.html
+++ b/index.html
@@ -168,6 +168,114 @@
         </div>
     </section>
 
+    <!-- Features -->
+    <section class="features" id="features">
+        <div class="features__container container">
+          <div class="features__content">
+            <h2 class="features__title">Key Takeaways</h2>
+            <p class="features__description">
+              Discover the powerful features that make Leno the ultimate
+              productivity and health companion:
+            </p>
+            <div class="features__grid">
+              <!-- Grid Column 1 -->
+              <div class="features__grid-column features__grid-column-left">
+                <!-- Grid Item 1 -->
+                <div class="features__grid-item">
+                  <div class="features__grid-item-text">
+                    <h4 class="features__grid-item-text-title">Real-Time Data</h4>
+                    <p class="features__grid-item-text-description">
+                      Access real-time data instantly, ensuring you're always
+                      up-to-date with the latest information.
+                    </p>
+                  </div>
+                  <div class="features__grid-item-icon">
+                    <i class="fas fa-rocket fa-4x"></i>
+                  </div>
+                </div>
+                <!-- Grid Item 2 -->
+                <div class="features__grid-item">
+                  <div class="features__grid-item-text">
+                    <h4 class="features__grid-item-text-title">Visual Editor</h4>
+                    <p class="features__grid-item-text-description">
+                      Customize your workspace with our intuitive visual editor.
+                    </p>
+                  </div>
+                  <div class="features__grid-item-icon">
+                    <i class="fas fa-code fa-4x"></i>
+                  </div>
+                </div>
+                <!-- Grid Item 3 -->
+                <div class="features__grid-item">
+                  <div class="features__grid-item-text">
+                    <h4 class="features__grid-item-text-title">
+                      Refined Options
+                    </h4>
+                    <p class="features__grid-item-text-description">
+                      Access a wide range of refined options to tailor Leno to
+                      your unique needs.
+                    </p>
+                  </div>
+                  <div class="features__grid-item-icon">
+                    <i class="fas fa-gem fa-4x"></i>
+                  </div>
+                </div>
+              </div>
+  
+              <!-- Grid Column 2 -->
+              <div class="features__grid-column features__grid-column-center">
+                <img src="./images/features-smartphone-1.png" alt="" />
+              </div>
+  
+              <!-- Grid Column 3 -->
+              <div class="features__grid-column features__grid-column-right">
+                <!-- Grid Item 1 -->
+                <div class="features__grid-item">
+                  <div class="features__grid-item-text">
+                    <h4 class="features__grid-item-text-title">Calendar Input</h4>
+                    <p class="features__grid-item-text-description">
+                      Seamlessly integrate your calendar to stay organized and on
+                      track.
+                    </p>
+                  </div>
+                  <div class="features__grid-item-icon">
+                    <i class="fas fa-calendar fa-4x"></i>
+                  </div>
+                </div>
+                <!-- Grid Item 2 -->
+                <div class="features__grid-item">
+                  <div class="features__grid-item-text">
+                    <h4 class="features__grid-item-text-title">Easy Reading</h4>
+                    <p class="features__grid-item-text-description">
+                      Enjoy distraction-free reading with Leno's clean and
+                      intuitive interface.
+                    </p>
+                  </div>
+                  <div class="features__grid-item-icon">
+                    <i class="fas fa-book fa-4x"></i>
+                  </div>
+                </div>
+                <!-- Grid Item 3 -->
+                <div class="features__grid-item">
+                  <div class="features__grid-item-text">
+                    <h4 class="features__grid-item-text-title">
+                      Good Foundation
+                    </h4>
+                    <p class="features__grid-item-text-description">
+                      Leno is built on a solid foundation of user feedback and
+                      cutting-edge technology.
+                    </p>
+                  </div>
+                  <div class="features__grid-item-icon">
+                    <i class="fas fa-cube fa-4x"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
     <script src="./js/script.js"></script>
 </body>
 </html>
